写了一下购物车

--- a/src/details.html
+++ b/src/details.html
@@ -108,9 +108,9 @@
 				</div><!--option-->
 				<hr style="margin-bottom:20px; color: #ccc;margin-top: 20px;">
 				<div class="purchase-details">
-					<a href="##" class="join-cart">加入购物车</a>
-					<a href="##" class="buy-now">立即购买</a>
-					<a href="##" class="QR-code-buy">
+					<a href="javascript:void(0)" class="join-cart">加入购物车</a>
+					<a href="#" class="buy-now">立即购买</a>
+					<a href="#" class="QR-code-buy">
 						<img src="https://www.myzte.com/themes/pc/zhongxing/images/ewm.png?vb701" alt="">&nbsp;扫码购买
 						<div class="image-block"><img src="https://www.myzte.com/openapi/qrcode/encode/size/5/margin/5?txt=https%3A%2F%2Fwww.myzte.com%2Faxon-m.html" alt=""></div>
 					</a>
