--- a/src/footer.html
+++ b/src/footer.html
@@ -24,31 +24,31 @@
 		<div class="footer-mid">
 			<div class="contact">
 				<h4><a href="##">关注我们</a></h4>
+				<p><a href="##">中兴社区</a></p>
 				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
+				<p><a href="##">新浪微博</a></p>
 			</div>
 			
 			<div class="help">
-				<h4><a href="##">关注我们</a></h4>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
+				<h4><a href="##">帮助中心</a></h4>
+				<p><a href="##">支付方式</a></p>
+				<p><a href="##">购物指南</a></p>
+				<p><a href="##">配送指南</a></p>
 			</div>
 			
 			<div class="service">
-				<h4><a href="##">关注我们</a></h4>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
+				<h4><a href="##">售后服务</a></h4>
+				<p><a href="##">退换货流程</a></p>
+				<p><a href="##">售后网点</a></p>
+				<p><a href="##">退换货政策</a></p>
+				<p><a href="##">保修政策</a></p>
 			</div>
 			
 			<div class="about">
-				<h4><a href="##">关注我们</a></h4>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
-				<p><a href="##">官方微信</a></p>
+				<h4><a href="##">关于商城</a></h4>
+				<p><a href="##">联系我们</a></p>
+				<p><a href="##">商城简介</a></p>
+				<p><a href="##">礼品团购</a></p>
 			</div>
 			
 			<div class="customer">
